--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,8 +26,13 @@ android {
 
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
-
+    implementation 'com.squareup.okhttp3:okhttp:3.10.0'
+    implementation 'com.squareup.okhttp3:logging-interceptor:3.10.0'
+    implementation 'com.google.code.gson:gson:2.8.5'
     testImplementation 'junit:junit:4.12'
-    implementation 'com.android.support:support-v4:23.+'
     implementation files('libs/Msc.jar')
+    implementation 'org.greenrobot:eventbus:3.0.0'
+
+
+
 }
